--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -15,10 +15,10 @@
             <p>{{ comment.text }}</p>
         {% endfor %}
         {% if previous >= 0 %}
-            <a href="{{ path('conference', { id: conference.id, offset:
+            <a href="{{ path('conference', { slug: conference.slug, offset:
                 previous }) }}">Previous</a>
         {% endif %}
-        {% if next < comments|length %}<a href="{{ path('conference', { id: conference.id, offset: next
+        {% if next < comments|length %}<a href="{{ path('conference', { slug: conference.slug, offset: next
         }) }}">Next</a>
         {% endif %}
     {% else %}
